# jarvis

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  logging_config.py  main.py
app/agent/: __init__.py  common.py  dispatcher.py  events.py  graph.py  interrupts.py  nodes.py  reports.py  risk.py  runner.py  state.py  synthesis.py  verification.py
app/api/: agent.py  routes.py
app/channels/: feishu.py
app/knowledge_base/: __init__.py  api.py  chunking.py  db.py  embedding.py  eval.py  indexing.py  ingest.py  repositories.py  search.py  sec_parse.py  service.py
app/llm/: __init__.py  client.py  deepseek.py  jarvis.py
app/persistence/: __init__.py  db.py  repositories.py
app/skills/: __init__.py  base.py  bootstrap.py  coder.py  echo.py  feishu.py  loader.py  manifest.py  registry.py  shell.py  tavily.py
app/tools/: __init__.py  capabilities.py  registry.py  specs.py
app/workers/: __init__.py  base.py  events.py  executor.py  inline.py  threaded.py
docs/design/: AGENT_STATE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  INDUSTRIALIZATION_ROADMAP.md  JARVIS_2_1_REFACTOR_PLAN.md  KNOWLEDGE_BASE_DESIGN.md  LANGGRAPH_AGENT_DESIGN.md  MIGRATION_PLAN.md  MVP_PLAN.md  PRD.md  SEC_DEEPRESEARCH_DESIGN.md  (+5 more)
prompts/: assessor_system.md  planner_system.md  planner_user.md  synthesizer_system.md
scripts/: build_eval_query_json.py  diagnose_heuristic_queries.py  generate_eval_queries_with_progress.py  import_eval_queries_json.py  refresh_heuristic_queries_json.py
tests/: test_agent.py  test_health.py  test_knowledge_base.py
(+8 files in other folders)
